# django-autoparsed-address-field

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  pytest.ini  setup.cfg
.github/workflows/: release.yml  run_tests.yml
autoparsed_address_field/: admin.py  apps.py  descriptors.py  fields.py  mixins.py  models.py  signals.py  utils.py
autoparsed_address_field/locale/es/LC_MESSAGES/: django.po
autoparsed_address_field/locale/fr/LC_MESSAGES/: django.po
autoparsed_address_field/migrations/: 0001_initial.py  0002_address_address_id_alter_address_address_line_1_and_more.py
autoparsed_address_field/models/: __init__.py  address.py  country.py  locality.py  state.py
autoparsed_address_field/services/: __init__.py  arcgis.py  scourgify.py
autoparsed_address_field/tests/: __init__.py  test_admin.py  test_descriptors.py  test_fields.py  test_mixins.py  test_models_address.py  test_models_country.py  test_models_locality.py  test_models_state.py  test_services_arcgis.py  test_services_scourgify.py  test_signals.py  test_utils.py  test_utils_uuid.py
autoparsed_address_field/utils/: uuid.py
test_project/test_project/: settings.py  urls.py
