[metadata]
name = django-autoparsed-address-field
version = 1.0.3
description = A Django package to manage and parse addresses with geocoding support.
long_description = file: README.md
long_description_content_type = text/markdown
author = Robert Zwink
author_email = rob@zwink.net
url = https://github.com/rzwink/django-autoparsed-address-field
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.2
    Framework :: Django :: 4.0
    Framework :: Django :: 4.1
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
include_package_data = True
python_requires = >=3.8
install_requires =
    django>=3.2
    geopy>=2.4.1
    usaddress-scourgify>=0.6.0
    uszipcode>=1.0.1
    sqlalchemy-mate==1.4.28.4
    python-Levenshtein>=0.26.1

[options.packages.find]
exclude =
    tests
    test_project

[options.extras_require]
dev =
    pytest
    pytest-django
    black
    flake8
    pre-commit
